la réalisation de la partie footer

--- a/contact.html
+++ b/contact.html
@@ -71,5 +71,14 @@
       </form>
     </div>
   </section>
+    <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer__inner">
+      <p>© <span id="year"></span> Mini Shop — Projet GitHub (groupe de 3)</p>
+      <a class="footer__link" href="index.html">Retour accueil</a>
+    </div>
+  </footer>
 
+  <script src="script.js"></script>
+</body>
 </html>
