realisation de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -89,52 +89,52 @@
 
                 <!-- Produit 3 -->
                 <article class="card">
-                    <img class="card__img" src="images/products/p3.jpg" alt="Produit 3">
+                    <img class="card__img" src="images/products/p3.jpg" alt="tomates">
                     <div class="card__body">
-                        <h3 class="card__title">Produit 3</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <h3 class="card__title">tomates</h3>
+                        <p class="card__text">Des tomates fraiches tres bien entretenue recolte il y a moins de 24h.</p>
                         <div class="card__footer">
                             <span class="price">12 000 FCFA</span>
-                            <button class="btn btn--small" data-product="Produit 3">Détails</button>
+                            <button class="btn btn--small" data-product="tomates">Détails</button>
                         </div>
                     </div>
                 </article>
 
                 <!-- Produit 4 -->
                 <article class="card">
-                    <img class="card__img" src="images/products/p4.jpg" alt="Produit 4">
+                    <img class="card__img" src="images/products/p4.jpg" alt="chauffe eau">
                     <div class="card__body">
-                        <h3 class="card__title">Produit 4</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <h3 class="card__title">chauffe eau</h3>
+                        <p class="card__text">chauffe eau moderne, parfait pour des bains chauds.</p>
                         <div class="card__footer">
-                            <span class="price">3 500 FCFA</span>
-                            <button class="btn btn--small" data-product="Produit 4">Détails</button>
+                            <span class="price">350 500 FCFA</span>
+                            <button class="btn btn--small" data-product="chauffe eau">Détails</button>
                         </div>
                     </div>
                 </article>
 
                 <!-- Produit 5 -->
                 <article class="card">
-                    <img class="card__img" src="images/products/p5.jpg" alt="Produit 5">
+                    <img class="card__img" src="images/products/p5.jpg" alt="Riz">
                     <div class="card__body">
-                        <h3 class="card__title">Produit 5</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <h3 class="card__title">Riz</h3>
+                        <p class="card__text">Riz de qualite superieur, cuisson rapide et bien parfumee</p>
                         <div class="card__footer">
                             <span class="price">15 000 FCFA</span>
-                            <button class="btn btn--small" data-product="Produit 5">Détails</button>
+                            <button class="btn btn--small" data-product="Riz">Détails</button>
                         </div>
                     </div>
                 </article>
 
                 <!-- Produit 6 -->
                 <article class="card">
-                    <img class="card__img" src="images/products/p6.jpg" alt="Produit 6">
+                    <img class="card__img" src="images/products/p6.jpg" alt="jeans">
                     <div class="card__body">
-                        <h3 class="card__title">Produit 6</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <h3 class="card__title">jeans</h3>
+                        <p class="card__text">jeans de tres bonne qualite, tres confortable et 100% reciclable</p>
                         <div class="card__footer">
                             <span class="price">9 900 FCFA</span>
-                            <button class="btn btn--small" data-product="Produit 6">Détails</button>
+                            <button class="btn btn--small" data-product="jeans">Détails</button>
                         </div>
                     </div>
                 </article>
