--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
       <form class="form" id="contactForm" novalidate>
         <div class="field">
           <label for="name">Nom</label>
-          <input id="name" name="name" type="text" placeholder="Ex: ZONGO Natacha" required />
+          <input id="name" name="name" type="text" placeholder="Ex: BAKOUAN Hermann" required />
           <small class="error" data-error-for="name"></small>
         </div>
 
