--- a/index.html
+++ b/index.html
@@ -42,13 +42,6 @@
                     <a class="btn btn--ghost" href="contact.html">Nous contacter</a>
                 </div>
             </div>
-
-            <div class="hero__card">
-                <p class="muted">Astuce :</p>
-                <p>
-                    Remplace les images par les vôtres dans <code>images/products/</code> et ajuste les titres/prix.
-                </p>
-            </div>
         </div>
     </section>
 
@@ -66,7 +59,7 @@
                     <img class="card__img" src="images/products/p1.jpg" alt="Produit 1">
                     <div class="card__body">
                         <h3 class="card__title">Produit 1</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <p class="card__text">Il s'agit d'un produit de qualité supérieure, parfait pour les besoins quotidiens.</p>
                         <div class="card__footer">
                             <span class="price">5 000 FCFA</span>
                             <button class="btn btn--small" data-product="Produit 1">Détails</button>
@@ -79,7 +72,7 @@
                     <img class="card__img" src="images/products/p2.jpg" alt="Produit 2">
                     <div class="card__body">
                         <h3 class="card__title">Produit 2</h3>
-                        <p class="card__text">Petite description du produit (2 lignes max).</p>
+                        <p class="card__text">Soin de beauté naturel, parfait pour un soin quotidien.</p>
                         <div class="card__footer">
                             <span class="price">8 500 FCFA</span>
                             <button class="btn btn--small" data-product="Produit 2">Détails</button>
